# rawmultiplayerplatformer

./: .gitignore  CMakeLists.txt  client  server
assets/: main.js  obfuscated.js
libs/game_engine/include/: arena_alloc.h  config.h  keyboard.h  physics.h  rendering.h
libs/game_engine/src/: arena_alloc.c  keyboard.c  physics.c  rendering.c
libs/network/include/: client.h  network.h
libs/network/src/: client.c  network.c
src/: client.c  game.c  server.c
tools/llvm-mingw-20260616-ucrt-ubuntu-22.04-x86_64/lib/: liblldb.so.22.1  liblldbIntelFeatures.so.22.1
tools/llvm-mingw-20260616-ucrt-ubuntu-22.04-x86_64/x86_64-w64-mingw32/: include
